--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -140,6 +140,7 @@
                 } */
 
 
+
     </style>
     <script>
         let user = "{{request.user}}"
@@ -159,6 +160,7 @@
         return cookieValue;
     }
     const csrftoken = getCookie('csrftoken');
+
 
 
     </script>
@@ -234,13 +236,19 @@
                         >
                             <i class="zmdi zmdi-search"></i>
                         </div>
-
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
+                        {% if user.is_authenticated %}
+                            <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
                              data-notify="{{cart.get_itemtotal}}"
-                        >
-                            <i class="zmdi zmdi-shopping-cart"></i>
-                        </div>
-
+                            >
+                                <i class="zmdi zmdi-shopping-cart"></i>
+                            </div>
+                        {% else %}
+                            <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
+                             data-notify="0"
+                            >
+                                <i class="zmdi zmdi-shopping-cart"></i>
+                            </div>
+                        {% endif %}
                         <!--                        <a-->
                         <!--                                href="#"-->
                         <!--                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"-->
@@ -406,7 +414,7 @@
             <ul class="header-cart-wrapitem w-full">
                 {% for item in cartitems %}
                 <li class="header-cart-item flex-w flex-t m-b-12">
-<!--                    <div class="header-cart-item-img delete-cart-item">-->
+                    <!--                    <div class="header-cart-item-img delete-cart-item">-->
                     <div class="how-itemcart1 delete-cart-item" data-cartItem="{{item.id}}">
                         <img src="{{item.product.image.url}}" alt="IMG"/>
                     </div>
@@ -480,145 +488,140 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg3 p-t-75 p-b-32">
+<footer class="bg3 p-t-75 p-b-0">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-lg-3 p-b-50">
+        <div class="row" style="align-items:center;">
+            <div class="col-sm-6 col-lg-3 p-b-50 p-l-160">
                 <h4 class="stext-301 cl0 p-b-30">Categories</h4>
 
                 <ul>
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> T-shirts </a>
+                        <a href="product.html" class="stext-107 cl7 hov-cl1 trans-04"> T-shirts </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> Mugs </a>
+                        <a href="product.html" class="stext-107 cl7 hov-cl1 trans-04"> Mugs </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> Cushions </a>
+                        <a href="product.html" class="stext-107 cl7 hov-cl1 trans-04"> Cushions </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> Bottles </a>
+                        <a href="product.html" class="stext-107 cl7 hov-cl1 trans-04"> Bottles </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> Bags </a>
+                        <a href="product.html" class="stext-107 cl7 hov-cl1 trans-04"> Bags </a>
                     </li>
                 </ul>
             </div>
 
-            <div class="col-sm-6 col-lg-3 p-b-50">
+            <div class="col-sm-6 col-lg-3 p-b-50 p-l-180">
                 <h4 class="stext-301 cl0 p-b-30">Help</h4>
 
                 <ul>
+
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                            Track Order
-                        </a>
+                        <a href="contact.html" class="stext-107 cl7 hov-cl1 trans-04"> Returns </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> Returns </a>
-                    </li>
-
-                    <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+                        <a href="cart.html" class="stext-107 cl7 hov-cl1 trans-04">
                             Shipping
                         </a>
                     </li>
 
                     <li class="p-b-10">
-                        <a href="#" class="stext-107 cl7 hov-cl1 trans-04"> FAQs </a>
+                        <a href="contact.html" class="stext-107 cl7 hov-cl1 trans-04"> FAQs </a>
                     </li>
                 </ul>
             </div>
 
-            <div class="col-sm-6 col-lg-3 p-b-50">
+            <div class="col-sm-6 col-lg-3 p-b-50 p-l-160">
                 <h4 class="stext-301 cl0 p-b-30">GET IN TOUCH</h4>
 
                 <p class="stext-107 cl7 size-201">
                     Any questions? Let us know in store at Teku, Kathmandu or call us on (+977) 9841246413
                 </p>
 
-                <div class="p-t-27">
-                    <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
+                <div class="p-t-27 p-l-20">
+                    <a href="https://www.facebook.com/RaahScreenPrint" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
                         <i class="fa fa-facebook"></i>
                     </a>
 
-                    <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-                        <i class="fa fa-instagram"></i>
-                    </a>
+                    <!--                    <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">-->
+                    <!--                        <i class="fa fa-instagram"></i>-->
+                    <!--                    </a>-->
 
-                    <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-                        <i class="fa fa-pinterest-p"></i>
-                    </a>
+                    <!--                    <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">-->
+                    <!--                        <i class="fa fa-pinterest-p"></i>-->
+                    <!--                    </a>-->
                 </div>
             </div>
 
-            <div class="col-sm-6 col-lg-3 p-b-50">
-                <h4 class="stext-301 cl0 p-b-30">Newsletter</h4>
+            <!--            <div class="col-sm-6 col-lg-3 p-b-50">-->
+            <!--                <h4 class="stext-301 cl0 p-b-30">Newsletter</h4>-->
 
-                <form>
-                    <div class="wrap-input1 w-full p-b-4">
-                        <input
-                                class="input1 bg-none plh1 stext-107 cl7"
-                                type="text"
-                                name="email"
-                                placeholder="email@example.com"
-                        />
-                        <div class="focus-input1 trans-04"></div>
-                    </div>
+            <!--                <form> -->
+            <!--                    <div class="wrap-input1 w-full p-b-4">-->
+            <!--                        <input-->
+            <!--                                class="input1 bg-none plh1 stext-107 cl7"-->
+            <!--                                type="text"-->
+            <!--                                name="email"-->
+            <!--                                placeholder="email@example.com"-->
+            <!--                        />-->
+            <!--                        <div class="focus-input1 trans-04"></div>-->
+            <!--                    </div>-->
 
-                    <div class="p-t-18">
-                        <button
-                                class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04"
-                        >
-                            Subscribe
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
+            <!--                    <div class="p-t-18">-->
+            <!--                        <button-->
+            <!--                                class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04"-->
+            <!--                        >-->
+            <!--                            Subscribe-->
+            <!--                        </button>-->
+            <!--                    </div>-->
+            <!--                </form>-->
+            <!--            </div>-->
+            <!--        </div>-->
 
-        <div class="p-t-40">
-            <div class="flex-c-m flex-w p-b-18">
-                <a href="#" class="m-all-1">
-                    <img src="{% static 'website/images/icons/icon-pay-01.png' %}" alt="ICON-PAY"/>
-                </a>
+            <!--        <div class="p-t-40">-->
+            <!--            <div class="flex-c-m flex-w p-b-18">-->
+            <!--                <a href="#" class="m-all-1">-->
+            <!--                    <img src="{% static 'website/images/icons/icon-pay-01.png' %}" alt="ICON-PAY"/>-->
+            <!--                </a>-->
 
-                <a href="#" class="m-all-1">
-                    <img src="{% static 'website/images/icons/icon-pay-02.png' %}" alt="ICON-PAY"/>
-                </a>
+            <!--                <a href="#" class="m-all-1">-->
+            <!--                    <img src="{% static 'website/images/icons/icon-pay-02.png' %}" alt="ICON-PAY"/>-->
+            <!--                </a>-->
 
-                <a href="#" class="m-all-1">
-                    <img src="{% static 'website/images/icons/icon-pay-03.png' %}" alt="ICON-PAY"/>
-                </a>
+            <!--                <a href="#" class="m-all-1">-->
+            <!--                    <img src="{% static 'website/images/icons/icon-pay-03.png' %}" alt="ICON-PAY"/>-->
+            <!--                </a>-->
 
-                <a href="#" class="m-all-1">
-                    <img src="{% static 'website/images/icons/icon-pay-04.png' %}" alt="ICON-PAY"/>
-                </a>
+            <!--                <a href="#" class="m-all-1">-->
+            <!--                    <img src="{% static 'website/images/icons/icon-pay-04.png' %}" alt="ICON-PAY"/>-->
+            <!--                </a>-->
 
-                <a href="#" class="m-all-1">
-                    <img src="{% static 'website/images/icons/icon-pay-05.png' %}" alt="ICON-PAY"/>
-                </a>
-            </div>
+            <!--                <a href="#" class="m-all-1">-->
+            <!--                    <img src="{% static 'website/images/icons/icon-pay-05.png' %}" alt="ICON-PAY"/>-->
+            <!--                </a>-->
+            <!--            </div>-->
 
-            <p class="stext-107 cl6 txt-center">
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                <!-- Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                All rights reserved | Made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
-                by
-                <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                &amp; distributed by
-                <a href="https://themewagon.com" target="_blank">ThemeWagon</a> -->
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+            <!--            <p class="stext-107 cl6 txt-center">-->
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <!-- Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            All rights reserved | Made with
+            <i class="fa fa-heart-o" aria-hidden="true"></i>
+            by
+            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            &amp; distributed by
+            <a href="https://themewagon.com" target="_blank">ThemeWagon</a> -->
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <!--            </p>-->
         </div>
     </div>
 </footer>
@@ -649,7 +652,7 @@
                         </button>
                         <div class="user signinBx" id="logModal">
                             <div class="imgBx">
-                                <img src="{% static 'website/images\log2.jpg' %}" alt="">
+                                <img src="{% static 'website/images\login3.jpg' %}" alt="">
                             </div>
                             <div class="formBx">
                                 <form action="/login" method="post">
@@ -694,7 +697,7 @@
                                 </form>
                             </div>
                             <div class="imgBx">
-                                <img src="{% static 'website/images\signin.jpg' %}" alt="">
+                                <img src="{% static 'website/images\signin2.jpg' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -856,6 +859,7 @@
     $('.cart').click(function(){
         console.log('clicked')
     });
+
 
 
 
