--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -232,10 +232,10 @@
                 <!-- Icon header -->
                 <div class="ml-auto">
                     <div class="wrap-icon-header flex-w flex-r-m">
-                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search "
-                        >
-                            <i class="zmdi zmdi-search"></i>
-                        </div>
+<!--                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search "-->
+<!--                        >-->
+<!--                            <i class="zmdi zmdi-search"></i>-->
+<!--                        </div>-->
                         {% if user.is_authenticated %}
                             <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
                              data-notify="{{cart.get_itemtotal}}"
