--- a/raah/website/templates/cart.html
+++ b/raah/website/templates/cart.html
@@ -95,12 +95,12 @@
                                 <!--									Apply coupon-->
                                 <!--								</div>-->
                             </div>
-                            <a
-                                    href="{% url 'cart' %}">
-                                <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-                                    Update Cart
-                                </div>
-                            </a>
+<!--                            <a-->
+<!--                                    href="{% url 'cart' %}">-->
+<!--                                <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">-->
+<!--                                    Update Cart-->
+<!--                                </div>-->
+<!--                            </a>-->
                         </div>
                     </div>
                 </div>
