--- a/raah/website/templates/product.html
+++ b/raah/website/templates/product.html
@@ -40,11 +40,11 @@
                 <!--&lt;!&ndash;                    Filter&ndash;&gt;-->
                 <!--                </div>-->
 
-                <div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">
-                    <i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>
-                    <i class="icon-close-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
-                    Search
-                </div>
+<!--                <div class="flex-c-m stext-106 cl6 size-105 bor4 pointer hov-btn3 trans-04 m-tb-4 js-show-search">-->
+<!--                    <i class="icon-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-search"></i>-->
+<!--                    <i class="icon-close-search cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>-->
+<!--                    Search-->
+<!--                </div>-->
             </div>
 
             <!-- Search product -->
@@ -468,14 +468,14 @@
         </div>
 
         <!-- Load more -->
-        <div class="flex-c-m flex-w w-full p-t-45">
-            <a
-                    href="#"
-                    class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04"
-            >
-                Load More
-            </a>
-        </div>
+<!--        <div class="flex-c-m flex-w w-full p-t-45">-->
+<!--            <a-->
+<!--                    href="#"-->
+<!--                    class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04"-->
+<!--            >-->
+<!--                Load More-->
+<!--            </a>-->
+<!--        </div>-->
     </div>
 </section>
 
